umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_chiral-structure.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 28
sum_formula: C20H3O2
graph6: "X_h@c?cO?_A?A@?_?G??`?AOC???O???a???C???O??C????_??"
