umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_cis-trans-cycle.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 20
sum_formula: C20
graph6: ShCGGC@?G?_@?@??_?G?@??C??G??K??C
