umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_cml-1948-R-group.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 61
bond_count: 60
sum_formula: C52FNOS
graph6: "|hCGGC@?G?_@?@??_?G?@??C??G??G??C??G???G???_??@???@????_??@????@????C????G????G????C????@?????G????O?????@?????@?????_?C??????????@??????C?C????@??????????_?????????@???????G???????_??????@???????@????????_???????G???????@????????C????????G????????G????????C????????@?????????G???????C?????????@??????????_"
