umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_different-features.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 43
bond_count: 42
sum_formula: C37FNOS+2
graph6: jhCGGC@?G?_@?@??_?G?@??C??G??G??C??G???G???_??@???@????_??@????@????C????G????G????C????@?????G????O?????@?????@?????_?C??????????@??????C?C????@???????
