umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_display-abbreviation-groups-example.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 34
sum_formula: C23F6N3
graph6: _hEG_C@?G?_P?C??_?G?@??C?AG?????_?C????@?????GO???@???@???G???@?_??C?????G????O???O?
