umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_distorted-chain-with-attachment-points.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 30
sum_formula: C30N
graph6: "`hCGGC@?G?_??@??_?G?@??C??G??G??C??@???G??????@???@????_???G???@????C????G????G????C????@"
