umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_distorted-structure-attachment-points.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 35
bond_count: 35
sum_formula: C31BrClN
graph6: bhCGGC@?G??@?@??_?G?P?????G??G??C??@??AG??G???@???@???_c????????????C????G????G????C????P????@??O????
