umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_distorted-structure-with-r-group.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 14
bond_count: 13
sum_formula: C13
graph6: MhCGGC@?G?_@?@??_
