umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_distorted-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 22
sum_formula: C21NO
graph6: "VY_[A???G?_@?@??_?G?@??C??G??G??C?G???G???O?"
